--- a/src/pages/aboutMePage.css
+++ b/src/pages/aboutMePage.css
@@ -24,7 +24,7 @@
   width: 150px;
   height: 150px;
   object-fit: cover;
-  border: 3px solid #007bff;
+  border: 3px solid #727272;
 }
   
 .about-container p {
