--- a/src/pages/contactPage.css
+++ b/src/pages/contactPage.css
@@ -48,7 +48,7 @@
   
 /* Styling for the submit button */
 .contact-container button {
-  background-color: #007bff;
+  background-color: #727272;
   color: white;
   border: none;
   border-radius: 4px;
@@ -59,5 +59,6 @@
 }
   
 .contact-container button:hover {
-  background-color: #0056b3;
+  background-color: #4a4a4a;
+  color: #FF5722;
 }
